--- a/index.html
+++ b/index.html
@@ -1,12 +1,8 @@
 <!DOCTYPE HTML>
-<!--
-	Miniport by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
-		<title>Miniport by HTML5 UP</title>
+		<title>Alex Cortez</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -16,9 +12,10 @@
 		<!-- Nav -->
 			<nav id="nav">
 				<ul class="container">
-					<li><a href="#top">Top</a></li>
-					<li><a href="#work">Work</a></li>
-					<li><a href="#portfolio">Portfolio</a></li>
+					<li><a href="about">About</a></li>
+					<li><a href="#skills">Skills</a></li>
+					<li><a href="#projects">Projects</a></li>
+					<li><a href="#blog">Blog</a></li>
 					<li><a href="#contact">Contact</a></li>
 				</ul>
 			</nav>
@@ -28,13 +25,13 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-4 col-5-large col-12-medium">
-							<span class="image fit"><img src="images/pic00.jpg" alt="" /></span>
+							<span class="image fit"><img src="/Users/l/Desktop/html5up-miniport/images/caricature.jpg" alt="" /></span>
 						</div>
 						<div class="col-8 col-7-large col-12-medium">
 							<header>
-								<h1>Hi. I'm <strong>Jane Doe</strong>.</h1>
+								<h1>Hi, I'm <strong>Alex Cortez</strong>.</h1>
 							</header>
-							<p>And this is <strong>Miniport</strong>, a free, fully responsive HTML5 site template designed by <a href="http://twitter.com/ajlkn">AJ</a> for <a href="http://html5up.net">HTML5 UP</a> &amp; released under the <a href="http://html5up.net/license">CCA license</a>.</p>
+							<p>And I'm a <strong>Frontend Developer</strong>.</p>
 							<a href="#work" class="button large scrolly">Learn about what I do</a>
 						</div>
 					</div>
@@ -45,36 +42,86 @@
 			<article id="work" class="wrapper style2">
 				<div class="container">
 					<header>
-						<h2>Here's all the stuff I do.</h2>
-						<p>Odio turpis amet sed consequat eget posuere consequat.</p>
+						<h2>Projects</h2>
 					</header>
 					<div class="row aln-center">
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
-								<span class="icon featured fa-comments"></span>
-								<h3>Consequat lorem</h3>
-								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
+								<span class="image fit"><img src="/Users/l/Desktop/html5up-miniport/images/drumkit.jpg" /></span>
+								<h3>Drumkit Sounds</h3>
+
+							<div style="display: flex;">
+								<div>
+									<h4>Tech Stack:</h4>
+									<ul>
+										<li>HTML</li>
+										<li>CSS</li>
+										<li>Javascript</li>
+									</ul>
+								</div>
+								<div style="margin-left: 2rem;">
+									<h4>Features:</h4>
+									<ul>
+										<li>Sound Effects</li>
+										<li>Responsive Design</li>
+									</ul>
+								</div>
+							</div>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
-								<span class="icon solid featured fa-camera-retro"></span>
-								<h3>Lorem dolor tempus</h3>
-								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
+								<span class="image fit"><img src="/Users/l/Desktop/html5up-miniport/images/warriorImage.png" /></span>
+								<h3>Warrior Player Stats</h3>
+
+								<div style="display: flex;">
+									<div>
+										<h4>Tech Stack:</h4>
+										<ul>
+											<li>HTML</li>
+											<li>CSS</li>
+											<li>Javascript</li>
+											<li>React</li>
+										</ul>
+									</div>
+									<div style="margin-left: 2rem;">
+										<h4>Features:</h4>
+										<ul>
+											<li>Image Carousel</li>
+											<li>Statistic Carousel</li>
+											<li>Responsive Design</li>
+										</ul>
+									</div>
+								</div>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
-								<span class="icon featured fa-thumbs-up"></span>
-								<h3>Feugiat posuere</h3>
-								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
+								<span class="image fit"><img src="/Users/l/Desktop/html5up-miniport/images/dashboardImage.png" /></span>
+								<h3>SaaS Dashboard</h3>
+								<div style="display: flex;">
+									<div>
+										<h4>Tech Stack:</h4>
+										<ul>
+											<li>HTML</li>
+											<li>CSS</li>
+											<li>Javascript</li>
+											<li>React</li>
+										</ul>
+									</div>
+									<div style="margin-left: 2rem;">
+										<h4>Features:</h4>
+										<ul>
+											<li>Business Metrics</li>
+											<li>Line Chart</li>
+											<li>Sidebar</li>
+											<li>Responsive Design</li>
+										</ul>
+									</div>
+								</div>
 							</section>
 						</div>
 					</div>
-					<footer>
-						<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
-						<a href="#portfolio" class="button large scrolly">See some of my recent work</a>
-					</footer>
 				</div>
 			</article>
 
@@ -82,8 +129,7 @@
 			<article id="portfolio" class="wrapper style3">
 				<div class="container">
 					<header>
-						<h2>Here’s some stuff I made recently.</h2>
-						<p>Proin odio consequat  sapien vestibulum consequat lorem dolore feugiat.</p>
+						<h2>Blog</h2>
 					</header>
 					<div class="row">
 						<div class="col-4 col-6-medium col-12-small">
@@ -107,32 +153,8 @@
 								<p>Ornare nulla proin odio consequat.</p>
 							</article>
 						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-								<h3><a href="#">Tempus dolore</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
-							</article>
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
-								<h3><a href="#">Feugiat aliquam</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
-							</article>
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
-								<h3><a href="#">Sed amet ornare</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
-							</article>
-						</div>
+						
 					</div>
-					<footer>
-						<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
-						<a href="#contact" class="button large scrolly">Get in touch with me</a>
-					</footer>
 				</div>
 			</article>
 
@@ -140,8 +162,7 @@
 			<article id="contact" class="wrapper style4">
 				<div class="container medium">
 					<header>
-						<h2>Have me make stuff for you.</h2>
-						<p>Ornare nulla proin odio consequat sapien vestibulum ipsum.</p>
+						<h2>Talk to me.</h2>
 					</header>
 					<div class="row">
 						<div class="col-12">
@@ -196,7 +217,7 @@
 					</div>
 					<footer>
 						<ul id="copyright">
-							<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; Untitled. All rights reserved.</li>
 						</ul>
 					</footer>
 				</div>
