--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 			<nav id="nav">
 				<ul class="container">
 					<li><a href="about">About</a></li>
-					<li><a href="#skills">Skills</a></li>
 					<li><a href="#projects">Projects</a></li>
 					<li><a href="#blog">Blog</a></li>
 					<li><a href="#contact">Contact</a></li>
@@ -31,25 +30,25 @@
 							<header>
 								<h1>Hi, I'm <strong>Alex Cortez</strong>.</h1>
 							</header>
-							<p>And I'm a <strong>Frontend Developer</strong>.</p>
+							<p>I'm a <strong>Frontend Developer</strong>.</p>
 							<a href="#work" class="button large scrolly">Learn about what I do</a>
 						</div>
 					</div>
 				</div>
 			</article>
-
 		<!-- Work -->
-			<article id="work" class="wrapper style2">
-				<div class="container">
-					<header>
-						<h2>Projects</h2>
-					</header>
-					<div class="row aln-center">
-						<div class="col-4 col-6-medium col-12-small">
-							<section class="box style1">
-								<span class="image fit"><img src="/Users/l/Desktop/html5up-miniport/images/drumkit.jpg" /></span>
-								<h3>Drumkit Sounds</h3>
-
+		<article id="work" class="wrapper style2">
+			<div class="container">
+				<header>
+					<h2>Projects</h2>
+				</header>
+				<div class="row aln-center">
+					<div class="col-4 col-6-medium col-12-small"><a href="/Users/l/Desktop/html5up-miniport/Projects/DrumkitProject.html" style="text-decoration: none;">
+						<section class="box style1">
+							<span class="image fit">
+								<img class='drumkit' src="images/drumkit.jpg" alt="">
+							</span>
+							<h3>Drumkit Sounds</h3>
 							<div style="display: flex;">
 								<div>
 									<h4>Tech Stack:</h4>
@@ -67,63 +66,68 @@
 									</ul>
 								</div>
 							</div>
-							</section>
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<section class="box style1">
-								<span class="image fit"><img src="/Users/l/Desktop/html5up-miniport/images/warriorImage.png" /></span>
-								<h3>Warrior Player Stats</h3>
+						</section>
+						</a>
+					</div>
 
-								<div style="display: flex;">
-									<div>
-										<h4>Tech Stack:</h4>
-										<ul>
-											<li>HTML</li>
-											<li>CSS</li>
-											<li>Javascript</li>
-											<li>React</li>
-										</ul>
-									</div>
-									<div style="margin-left: 2rem;">
-										<h4>Features:</h4>
-										<ul>
-											<li>Image Carousel</li>
-											<li>Statistic Carousel</li>
-											<li>Responsive Design</li>
-										</ul>
-									</div>
+					<div class="col-4 col-6-medium col-12-small">
+						<section class="box style1">
+							<span class="image fit">
+								<img class='warriorImage' src="/Users/l/Desktop/html5up-miniport/images/warrior copy.jpg" alt="">
+							</span>
+							<h3>Warrior Player Stats</h3>
+							<div style="display: flex;">
+								<div>
+									<h4>Tech Stack:</h4>
+									<ul>
+										<li>HTML</li>
+										<li>CSS</li>
+										<li>Javascript</li>
+										<li>React</li>
+									</ul>
 								</div>
-							</section>
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<section class="box style1">
-								<span class="image fit"><img src="/Users/l/Desktop/html5up-miniport/images/dashboardImage.png" /></span>
-								<h3>SaaS Dashboard</h3>
-								<div style="display: flex;">
-									<div>
-										<h4>Tech Stack:</h4>
-										<ul>
-											<li>HTML</li>
-											<li>CSS</li>
-											<li>Javascript</li>
-											<li>React</li>
-										</ul>
-									</div>
-									<div style="margin-left: 2rem;">
-										<h4>Features:</h4>
-										<ul>
-											<li>Business Metrics</li>
-											<li>Line Chart</li>
-											<li>Sidebar</li>
-											<li>Responsive Design</li>
-										</ul>
-									</div>
+								<div style="margin-left: 2rem;">
+									<h4>Features:</h4>
+									<ul>
+										<li>Image Carousel</li>
+										<li>Statistic Carousel</li>
+										<li>Responsive Design</li>
+									</ul>
 								</div>
-							</section>
-						</div>
+							</div>
+						</section>
+					</div>
+					<div class="col-4 col-6-medium col-12-small">
+						<section class="box style1">
+							<span class="image fit">
+								<img class='dashboardImage' src="/Users/l/Desktop/html5up-miniport/images/dashboardImage copy.png" alt="">
+							</span>
+							<h3>SaaS Dashboard</h3>
+							<div style="display: flex;">
+								<div>
+									<h4>Tech Stack:</h4>
+									<ul>
+										<li>HTML</li>
+										<li>CSS</li>
+										<li>Javascript</li>
+										<li>React</li>
+									</ul>
+								</div>
+								<div style="margin-left: 2rem;">
+									<h4>Features:</h4>
+									<ul>
+										<li>Business Metrics</li>
+										<li>Line Chart</li>
+										<li>Sidebar</li>
+										<li>Responsive Design</li>
+									</ul>
+								</div>
+							</div>
+						</section>
 					</div>
 				</div>
-			</article>
+			</div>
+		</article>
 
 		<!-- Portfolio -->
 			<article id="portfolio" class="wrapper style3">
@@ -132,28 +136,24 @@
 						<h2>Blog</h2>
 					</header>
 					<div class="row">
-						<div class="col-4 col-6-medium col-12-small">
+						<div class="col-4 col-6-medium col-12-small"><a href="/Users/l/Desktop/html5up-miniport/Blog/LearningCoding.html">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-								<h3><a href="#">Magna feugiat</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<div class="image featured"><img src="/Users/l/Desktop/html5up-miniport/images/blog_image_1 copy.jpg" alt="" /></div>
+								<h3><a href="#">Why I'm Learning To Code</a></h3>
 							</article>
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
+						</a></div>
+						<div class="col-4 col-6-medium col-12-small"><a href="/Users/l/Desktop/html5up-miniport/Blog/Combining.html">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-								<h3><a href="#">Veroeros primis</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<div class="image featured"><img src="/Users/l/Desktop/html5up-miniport/images/blog_image_2 copy.jpg" alt="" /></div>
+								<h3>Combining Coding And Marketing</a></h3>
 							</article>
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
+						</a></div>
+						<div class="col-4 col-6-medium col-12-small"><a href="/Users/l/Desktop/html5up-miniport/Blog/Schedule.html">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-								<h3><a href="#">Lorem ipsum</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<div class="image featured"><img src="/Users/l/Desktop/html5up-miniport/images/blog_image_3 copy.jpg" alt="" /></div>
+								<h3><a href="#">Schedule For Learning To Code</a></h3>
 							</article>
-						</div>
-						
+						</a></div>
 					</div>
 				</div>
 			</article>
@@ -194,11 +194,7 @@
 							<h3>Find me on ...</h3>
 							<ul class="social">
 								<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
 								<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-								<li><a href="#" class="icon brands fa-tumblr"><span class="label">Tumblr</span></a></li>
-								<li><a href="#" class="icon brands fa-google-plus"><span class="label">Google+</span></a></li>
 								<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
 								<!--
 								<li><a href="#" class="icon solid fa-rss"><span>RSS</span></a></li>
