--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
 								<h1>Hi, I'm <strong>Alex Cortez</strong>.</h1>
 							</header>
 							<p>I'm a <strong>Frontend Developer</strong>.</p>
-							<a href="#work" class="button large scrolly">Learn about what I do</a>
 						</div>
 					</div>
 				</div>
@@ -43,8 +42,8 @@
 					<h2>Projects</h2>
 				</header>
 				<div class="row aln-center">
-					<div class="col-4 col-6-medium col-12-small"><a href="/Users/l/Desktop/html5up-miniport/Projects/DrumkitProject.html" style="text-decoration: none;">
-						<section class="box style1">
+					<div class="col-4 col-6-medium col-12-small">
+						<section class="box style1"><a href="/Users/l/Desktop/html5up-miniport/Projects/DrumkitProject.html" style="text-decoration: none;">
 							<span class="image fit">
 								<img class='drumkit' src="images/drumkit.jpg" alt="">
 							</span>
@@ -52,7 +51,7 @@
 							<div style="display: flex;">
 								<div>
 									<h4>Tech Stack:</h4>
-									<ul>
+									<ul style="color: grey;">
 										<li>HTML</li>
 										<li>CSS</li>
 										<li>Javascript</li>
@@ -60,18 +59,17 @@
 								</div>
 								<div style="margin-left: 2rem;">
 									<h4>Features:</h4>
-									<ul>
+									<ul style="color: grey;">
 										<li>Sound Effects</li>
 										<li>Responsive Design</li>
 									</ul>
 								</div>
 							</div>
-						</section>
-						</a>
+						</section></a>
 					</div>
 
 					<div class="col-4 col-6-medium col-12-small">
-						<section class="box style1">
+						<section class="box style1"><a href="/Users/l/Desktop/html5up-miniport/my-app/src/WarriorsProject/WarriorStats copy.js" style="text-decoration: none;">
 							<span class="image fit">
 								<img class='warriorImage' src="/Users/l/Desktop/html5up-miniport/images/warrior copy.jpg" alt="">
 							</span>
@@ -79,7 +77,7 @@
 							<div style="display: flex;">
 								<div>
 									<h4>Tech Stack:</h4>
-									<ul>
+									<ul style="color: grey;">
 										<li>HTML</li>
 										<li>CSS</li>
 										<li>Javascript</li>
@@ -88,14 +86,14 @@
 								</div>
 								<div style="margin-left: 2rem;">
 									<h4>Features:</h4>
-									<ul>
+									<ul style="color: grey;">
 										<li>Image Carousel</li>
 										<li>Statistic Carousel</li>
 										<li>Responsive Design</li>
 									</ul>
 								</div>
 							</div>
-						</section>
+						</a></section>
 					</div>
 					<div class="col-4 col-6-medium col-12-small">
 						<section class="box style1">
@@ -193,9 +191,9 @@
 							<hr />
 							<h3>Find me on ...</h3>
 							<ul class="social">
-								<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-								<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
+								<li><a href="https://twitter.com/sufitogoofies" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+								<li><a href="https://www.linkedin.com/in/amcortez92" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://github.com/alexlitocortez" class="icon brands fa-github"><span class="label">Github</span></a></li>
 								<!--
 								<li><a href="#" class="icon solid fa-rss"><span>RSS</span></a></li>
 								<li><a href="#" class="icon brands fa-instagram"><span>Instagram</span></a></li>
