--- a/WarriorProject/Warrior.html
+++ b/WarriorProject/Warrior.html
@@ -4,17 +4,53 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="WarriorProject/Warriors copy.css" type="text/css" />
     <title>Document</title>
 </head>
-    <body>
-        <div id="like_button_container">
-            
-        </div>
+<body>
+    <div id="root">
+        
+    </div>
 
-        <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
-        <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.4.2/react.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.4.2/react-dom.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.21.1/babel.min.js"></script>
 
-        <!-- Load our React component. -->
-        <script src="like_button.js"></script>
-    </body>
+    <script type="text/babel">    
+
+
+
+        class Greeting extends React.Component {
+            render() {
+                return (
+                    <div>
+                        <button onClick={() => setStatsForCurry()} class='button' id='steph' type='button'>
+                            Stephen Curry
+                        </button>
+                        <button onClick={() => setStatsForOubre()} 
+                                id='kelly' 
+                                type='button'>
+                        Kelly Oubre</button>
+                        <button onClick={() => setStatsForWiggins()} 
+                                id='andrew' 
+                                type='button'>
+                        Andrew Wiggins</button>
+                        <button onClick={() => setStatsForGreen()} 
+                                id='draymond' 
+                                type='button'>
+                        Draymond Green</button>
+                        <button onClick={() => setStatsForWiseman()} 
+                                id='james' 
+                                type='button'>
+                        James Wiseman</button>
+                    </div>
+                );
+            }
+        }
+        ReactDOM.render(
+            <Greeting />,
+            document.getElementById('root')
+        );
+    </script>
+</body>
 </html>
